--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * Display the newly creating component elements-home inside module elements * * * * * * * * * * * -->
 <app-elements-home></app-elements-home>
+<app-collections-home></app-collections-home>
+<app-views-home></app-views-home>
+<app-mods-home></app-mods-home>
 
 
 
