Setup Routing Rule

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * Display the newly creating component elements-home inside module elements * * * * * * * * * * * -->
-<app-elements-home></app-elements-home>
-<app-collections-home></app-collections-home>
-<app-views-home></app-views-home>
-<app-mods-home></app-mods-home>
-
+<!-- * * * * * * * * * * * Remove direct connection and apply routing rule to display accordingly * * * * * * * * * * * -->
 
 
 
