--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * Remove direct connection and apply routing rule to display accordingly * * * * * * * * * * * -->
-
+<a href="/elements">Elements </a>
+<a href="/collections">Collections </a>
+<a href="/views">Views</a>
+<a href="/mods">Modules</a>
+<router-outlet></router-outlet>
 
 
 
@@ -8,4 +12,4 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<router-outlet></router-outlet>
+
