Adding semantic ui css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * Remove direct connection and apply routing rule to display accordingly * * * * * * * * * * * -->
-<a href="/elements">Elements </a>
-<a href="/collections">Collections </a>
-<a href="/views">Views</a>
-<a href="/mods">Modules</a>
+
+<a routerLink="/elements">Elements </a>
+
+<a routerLink="/collections">Collections </a>
+
+<a routerLink="/views">Views</a>
+
+<a routerLink="/mods">Modules</a>
+
 <router-outlet></router-outlet>
 
 
