routerLinkActive of angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
 <div class="ui container">
 
   <div class="ui secondary pointing menu">
-    <a routerLink="/elements" class="item">Elements</a>
+    <a routerLink="/elements" routerLinkActive="active" class="item">Elements</a>
 
-    <a routerLink="/collections" class="item">Collections</a>
+    <a routerLink="/collections" routerLinkActive="active" class="item">Collections</a>
 
-    <a routerLink="/views" class="item">Views</a>
+    <a routerLink="/views" routerLinkActive="active" class="item">Views</a>
 
-    <a routerLink="/mods" class="item">Modules</a>
+    <a routerLink="/mods" routerLinkActive="active" class="item">Modules</a>
   </div>
 
   <div class="ui segment">
