--- a/src/app/elements/place-holder/place-holder.component.html
+++ b/src/app/elements/place-holder/place-holder.component.html
@@ -1,6 +1,6 @@
 <div class="ui placeholder">
 
-    <div class="image header">
+    <div *ngIf="header" class="image header">
         <div class="line"></div>
         <div class="line"></div>
     </div>
