Parent Child relationship between elements and place holder. usage of custom directive

--- a/src/app/elements/place-holder/place-holder.component.html
+++ b/src/app/elements/place-holder/place-holder.component.html
@@ -6,10 +6,7 @@
     </div>
 
 
-    <div class="paragraph">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+    <div  class="paragraph">
+        <div *appTimes="lines" class="line"></div>        
     </div>
 </div>
