--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,3 +1,20 @@
-<app-divider></app-divider>
+<app-divider>
+    Place Holder Component
+</app-divider>
 <!-- <p>elements-home works!</p> -->
 <app-place-holder [lines]="5"></app-place-holder>
+
+<app-divider>
+    Segment Component
+</app-divider>
+
+<app-segement>
+    <header>
+        <i class="pdf file outline icon"></i>
+        No documents are listed for this document.
+    </header>
+    <button class="ui primary button">
+        Add document
+    </button>
+
+</app-segement>
