--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -9,10 +9,10 @@
 </app-divider>
 
 <app-segement>
-    <header>
+   <!-- <header>
         <i class="pdf file outline icon"></i>
         No documents are listed for this document.
-    </header>
+    </header> -->
     <button class="ui primary button">
         Add document
     </button>
