Views Component and statistics component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 
     <a routerLink="/collections" routerLinkActive="active" class="item">Collections</a>
 
+    <!-- Add a link to header in the app component's template file. This should navigate to views route -->
     <a routerLink="/views" routerLinkActive="active" class="item">Views</a>
 
     <a routerLink="/mods" routerLinkActive="active" class="item">Modules</a>
