--- a/src/app/views/views-home/views-home.component.html
+++ b/src/app/views/views-home/views-home.component.html
@@ -1,2 +1,6 @@
 <app-divider> Statistics Component</app-divider>
 <app-stastics [data]="stats"></app-stastics>
+
+
+<app-divider> Item List Component</app-divider>
+<app-items-list [itemsList]="items"></app-items-list>
