--- a/src/app/mods/modal/modal.component.html
+++ b/src/app/mods/modal/modal.component.html
@@ -1,6 +1,6 @@
-<div class="ui dimmer visible active">
+<div (click)="onCloseClick()" class="ui dimmer visible active">
     <div class="ui modal visible active">
-        <i class="close icon"></i>
+        <i (click)="onCloseClick()" class="close icon"></i>
         <div class="header">MODAL</div>
         <div class="content">
             <p>
@@ -9,8 +9,8 @@
         </div>
 
         <div class="actions">
-            <button class="ui button">OK</button>
+            <button (click)="onCloseClick()" class="ui button">OK</button>
         </div>
-        </div>
+    </div>
 
 </div>
