--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -1,4 +1,4 @@
 <app-divider>Modal Component</app-divider>
 
 <button (click)="onClick()">Show Modal</button>
-<app-modal *ngIf="modalOpen"></app-modal>
+<app-modal (close)="onClick()" *ngIf="modalOpen"></app-modal>
