--- a/src/app/mods/modal/modal.component.html
+++ b/src/app/mods/modal/modal.component.html
@@ -1,15 +1,19 @@
 <div (click)="onCloseClick()" class="ui dimmer visible active">
-    <div class="ui modal visible active">
+    <div (click)="$event.stopPropagation()" class="ui modal visible active">
         <i (click)="onCloseClick()" class="close icon"></i>
-        <div class="header">MODAL</div>
+        <div class="header">
+            <ng-content select="modalTitle"></ng-content>
+        </div>
         <div class="content">
-            <p>
-                Some content for Modal window should be right here !.
-            </p>
+           <ng-content></ng-content>
+        </div>
+
+        <div class="actions actions-default">
+            <button (click)="onCloseClick()" class="ui button">OK</button>
         </div>
 
         <div class="actions">
-            <button (click)="onCloseClick()" class="ui button">OK</button>
+            <ng-content select="[modalFooter]"> </ng-content>
         </div>
     </div>
 
