--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -1,4 +1,17 @@
 <app-divider>Modal Component</app-divider>
 
 <button (click)="onClick()">Show Modal</button>
-<app-modal (close)="onClick()" *ngIf="modalOpen"></app-modal>
+<app-modal (close)="onClick()" *ngIf="modalOpen">
+    <div modalTitle> Reusable Title</div>
+    <p>
+        I am Reusable modal window
+    </p>
+
+    <ng-container modalFooter>
+        <button class="ui button" (click)="onClick()"> Close Me</button>
+    </ng-container>
+</app-modal>
+
+
+<app-divider>Accordion Component</app-divider>
+<app-accordion></app-accordion>
