--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -14,4 +14,4 @@
 
 
 <app-divider>Accordion Component</app-divider>
-<app-accordion></app-accordion>
+<app-accordion [items]="items"></app-accordion>
