--- a/src/app/mods/accordion/accordion.component.html
+++ b/src/app/mods/accordion/accordion.component.html
@@ -1,6 +1,6 @@
 <div class="ui accordion styled">
     <ng-container *ngFor="let it of items; let i = index">
-        <div class="title" (click)="onClick(i)">
+        <div [ngClass]="{ active : i === openedItemIndex }"  class="title" (click)="onClick(i)">
             <i class="dropdown icon"></i>
                 {{ it.title }}            
         </div>
